--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -543,10 +543,10 @@ in particular in the context of prior-data conflict
 \subsubsection{Critique}
 \label{sec:updating}
 
-***on updating and conditioning; also conditioning versus belief revision (itip-special, other?)***
+%***on updating and conditioning; also conditioning versus belief revision (itip-special, other?)***
 
-In the literature the seemingly self-evident character of the Generalized Bayes Rule has been questioned.
-Indeed, \textcite[p.~335]{1991:walley} notes that, although the theory of coherence suggests that
+The seemingly self-evident character of the Generalized Bayes Rule has been questioned in the literature.
+\Textcite[p.~335]{1991:walley} notes that, although the theory of coherence suggests that
 ``[\ldots the GBR] is a reasonable updating strategy,
 [\ldots] there is nothing in the theory that requires You to [\ldots] construct conditional previsions [\ldots] through the GBR''
 and to ``[\ldots] adopt [\ldots them ] as Your new unconditional prevision''.
@@ -556,31 +556,48 @@ but because they are often indeterminate''.
 Indeed, \textcite[\S 6.11.1]{1991:walley} lists twelve items summarizing
 ``[\ldots] the reasons for which the GBR may fail to be applicable or useful as an updating strategy.''
 
-***conditioning versus belief revision***
+One argument is that the notion of coherence, of which the GBR is a consequence,
+may not be adequate to represent learning, especially when observed data is rather surprising.
+As posterior beliefs derived from the GBR must be coherent with both prior beliefs and data,
+they may be rather imprecise in case of very vague prior beliefs or unexpected data.
+Essentially, the GBR does not allow to abandon prior beliefs in the light of new data,
+and both too vague or specific, but (in the light of the data) inappropriate prior beliefs
+may influence posterior beliefs to an intolerable extent.%
+\footnote{However, as we will see in Section~\ref{sec:gbicp-properties-criteria},
+items~\ref{enum:n0vsn}. and \ref{enum:ntoinfty}.,
+in our model, data can outweigh prior beliefs.}
 
-Firstly, it has been shown that the decision theoretic justification of the Bayes' Rule
-as producing prior risk minimizing decision functions does not extend to the case of sets of priors.
+Indeed, it has been debated that---intuitively---posterior inferences derived via the GBR are often too imprecise.
+As such possibly counterintuitive bounds result from elements in the prior credal set under which the observed sample is rather unlikely,
+in order to maintain the understanding of updating as conditioning on the sample,
+several authors therefore suggested to reduce the prior credal sets in dependence on the sample.
+A radical way to achieve this is to consider in the conditioning process only those priors
+under which the observed sample has highest probability (see, e.g., \cite{2007:held}; see also \cite{1982:walley}),
+resulting in a procedure that is related to Dempster's rule of conditioning \parencite[see, e.g.,][\S 3.2]{itip-other}.
+Other ways to address this issue are update rules where imprecision is updated in accordance with an information measure 
+(\cite{1993:coolen, 1994:coolen}; see also \cite{1994:coolen::phd}), or hierarchical models,
+like the model suggested by \textcite{2008:cattaneo} in the (profile) likelihood context
+(see the short note in Section~\ref{sec:ip-related} below),
+a variant of which also allows to incorporate prior information by using a so-called prior likelihood.
+
+Another important critique of the Generalized Bayes' Rule relates to issues from a decision theoretic point of view.
+It has been shown that the decision theoretic justification of Bayes' Rule
+as producing prior risk minimising decision functions does not extend to the case of sets of priors.
 Updating by Generalized Bayes' Rule does no longer necessarily lead to optimal decision functions and thus, as one could argue,
 also not to optimal inference procedures; see, in particular, \textcite{2003:augustin} for a detailed discussion, 
 \textcite{2001:NoubiapSeidel} and \textcite{Augustin5:2004} for algorithms to calculate optimal decision functions.
 
-Secondly, it has been debated that---intuitively---in the case of no prior-data conflict
-the resulting interval limits may be too wide, and in this sense posterior inferences are too imprecise.
-Such possibly counterintuitive bounds result from elements in the prior credal set under which the observed sample is rather unlikely.
-In order to maintain the understanding of updating as conditioning on the sample,
-several authors therefore suggested to reduce the prior sets in dependence on the sample.
-A radical way to achieve this is to consider in the conditioning process only those priors
-under which the observed sample has highest probability, e.g., \textcite{2007:held}, see also \textcite{1982:walley},
-resulting in a procedure that is related to Dempster's rule of conditioning \parencite[see, e.g.,][\S 3.2]{itip-other}.
-Other ways to address this issue are update rules where imprecision is updated in accordance with an information measure 
-\parencite{1993:coolen, 1994:coolen}, see also \textcite{1994:coolen::phd} or hierarchical models,
-like the model suggested by \textcite{2008:cattaneo} in the (profile) likelihood context (see the short note in Section~****),
-a variant of which also allows to incorporate prior information by using a so-called prior likelihood.
+***something on conditioning versus belief revision???***
 
-Despite these criticisms, we will stick to ***
-***end with stressing that work here relies on GBR nevertheless.***
+%Despite these criticisms, we will stick to ***
+These important criticisms notwithstanding, 
+the models discussed in this thesis will rely on the inference procedure described above, based on the Generalised Bayes' Rule.
+As will be discussed in Section~\ref{sec:generalmodel},
+the suggested models nevertheless provide very attractive inference features.
+
 
 \subsection{Related Concepts}
+\label{sec:ip-related}
 
 The theory outlined in Sections~\ref{sec:ip-main} and \ref{sec:imprecisebayes} above
 is of course not the only attempt to complement probability theory as tool for handling uncertainty;%
