diss: bibliography stuff

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -170,7 +170,7 @@
   title = {Theory of Probability: A Critical Introductory Treatment},
   publisher = {John Wiley \& Sons},
   year = {1974--1975},
-  author = {{d}e Finetti, B.},
+  author = {{de Finetti}, B.},
   address = {Chichester},
   note = {{E}nglish translation of \cite{1970:finetti}}
 }
@@ -179,12 +179,12 @@
   title = {Teoria delle Probabilit\`a},
   publisher = {Einaudi},
   year = {1970},
-  author = {{d}e Finetti, B.},
+  author = {{de Finetti}, B.},
   address = {Turin}
 }
 
 @ARTICLE{1937:finetti,
-  author = {{d}e Finetti, B.},
+  author = {{de Finetti}, B.},
   title = {La pr\'evision: {S}es lois logiques, ses sources subjectives},
   journal = {Annales de l'Institut Henri Poincar\'e},
   year = {1937},
@@ -466,7 +466,7 @@
 
 @phdthesis{2007a:cattaneo,
     Author = {M. Cattaneo},
-    School = {ETH Zurich (available from http://dx.doi.org/10.3929/ethz-a-005463829)},
+    School = {ETH Zurich},
     Title = {Statistical Decisions Based Directly on the Likelihood Function},
     Url = {http://dx.doi.org/10.3929/ethz-a-005463829},
     Year = 2007}
@@ -474,7 +474,7 @@
 @techreport{2012:cattaneo-technicalRep,
     Author = {M. Cattaneo},
     Institution = {Department of Statistics, LMU Munich},
-    Number = {128 (available from http://epub.ub.uni-muenchen.de/13713/)},
+    Number = {128},
     Title = {Likelihood decision functions},
     Url = {http://epub.ub.uni-muenchen.de/13713/},
     Year = 2012}
@@ -649,7 +649,7 @@
 }
 
 @incollection{itip-decision,
-    author    = "Nathan Huntley and Robert Hable and Matthias M.C. Troffaes",
+    author    = "Nathan Huntley and Robert Hable and Matthias C.M. Troffaes",
     title     = "Decision Making",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
