--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -2,14 +2,10 @@
     AUTHOR = {Rao, C.R. and Toutenburg, H. and Shalabh and
               Heumann, C.},
      TITLE = {Linear Models and Generalizations},
-    SERIES = {Springer Series in Statistics},
-   EDITION = {extended},
-      NOTE = {Least squares and alternatives,
-              With contributions by Michael Schomaker},
+      NOTE = {With contributions by Michael Schomaker},
  PUBLISHER = {Springer},
    ADDRESS = {Berlin},
       YEAR = {2008},
-     PAGES = {xx+570},
       ISBN = {978-3-540-74226-5},
    MRCLASS = {62-01 (62F03 62F10 62J05 62J12)},
   MRNUMBER = {MR2370506}}
