diss: corrections in chapte 1

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -833,6 +833,8 @@ A first important issue is the proper modelling of no (or extremely vague) prior
 In traditional statistics, so-called \emph{non-informative priors} have been proposed, which, by different criteria,
 eventually all select a single traditional prior distribution,
 turning ignorance into a problem with rather precise probabilistic information.
+Furthermore, these `non-informative' priors are usually improper,
+leading to severe problems in hypotheses testing (as mentioned in Section~\ref{sec:beta-binom})
 We will comment on this issue in more detail in Section~\ref{sec:gbicp-properties-criteria},
 item \ref{enum:noninformative}, and in Section~\ref{sec:idm-and-near-ignorance}.
 
