--- a/intro.tex
+++ b/intro.tex
@@ -506,6 +506,8 @@ l(\hat{\theta}, \theta) &= \begin{cases} q (\hat{\theta}-\theta)     & \text{if 
 a tilted version of the absolute loss function, 
 leads to the quantile $q \in (0,1)$ of the posterior as point estimate.
 
+****make a figure here (quadratic, absolute, check)??***
+
 The \emph{indicator loss function}
 \begin{align*}
 l(\hat{\theta}, \theta) = \begin{cases} 0 & |\hat{\theta}-\theta| \le \epsilon \\ 1 & \text{else}\end{cases}\,,
