diss: minor tweaks

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -663,12 +663,12 @@ and if not, they reflect the lack of information inherent in the decision proble
 Then, precise decisions are in fact based on some arbitrary choices,
 but this arbitrariness is obscured by the method,
 and the precision of the method is merely a spurious one.
-Then, it is better to acknowledge indecision,
-instead of hiding it, as---if it must---a decision can be made nevertheless,
-in the same arbitrary way as with a spuriously precise method
+It is better to acknowledge indecision instead of hiding it,
+as---if it must---a decision can be made nevertheless,
+with the same arbitrariness as is hidden in a spuriously precise method
 \parencite[\S 5.7]{1991:walley}.
 
-Although precise Bayesian methods will be adequate in many inference settings,
+Although precise Bayesian methods can be adequate in many inference settings,
 ``[...] we need a theory of imprecise probabilites to tell us when precision is a poor idealisation''
 \parencite[\S 5.8.1, item~3, p.~250]{1991:walley}.
 
@@ -678,7 +678,7 @@ prior probabilities must be elicited,
 e.g., by questioning an expert in the field under study.
 To me it seems hardly questionable that it will be easier for such an expert
 to provide ranges instead of precise numbers.%
-\footnote{See a simple illustration of this in \parencite[\S 5.8, footnote~7, p.~535]{1991:walley}.}
+\footnote{See a simple illustration of this in \textcite[\S 5.8, footnote~7, p.~535]{1991:walley}.}
 What happens in practice already is that experts often provide ranges,
 and again, it seems misguided and unnecessary to derive precise probability statements
 from such imprecise assessments.
@@ -832,7 +832,8 @@ an adequate model to characterise, e.g.,
 a lottery where there is some limited information about the number of winning tickets,
 like the information that there should be about 5 to 10 winning tickets per 100 tickets.%
 \footnote{We will comment on the seemingly attractive alternative
-of putting a distribution on such an interval-valued winning probability at **** (hierarchical Bayes).}
+of putting a second-order distribution on the set of winning probabilities %such an interval-valued winning probability
+at **** (hierarchical Bayes).}
 
 
 \subsection{Motives from a Bayesian Perspective}
